--- a/local-ubuntu/standalone-ubuntu/Dockerfile
+++ b/local-ubuntu/standalone-ubuntu/Dockerfile
@@ -1,4 +1,4 @@
 FROM ubuntu
 
-RUN apt update && apt install curl iputils-ping net-tools telnet tcpdump \
+RUN apt update && apt install -y curl iputils-ping net-tools telnet tcpdump \
 traceroute procps dnsutils mtr psmisc openssh-client openssh-server
